@@ -9,6 +9,7 @@
   * Add A#assoc
   * Add A#rassoc
   * Add Enumerable#rindex
+  * Remove Enumerable#to_h and add A#to_h
 
 2009-03-14 - Sean Huber (shuber@huberry.com)
   * Fix evaluate_block issues and Enumerable methods
